solucione un error que apenas me di cuenta